Fixes to formatting_fn that caused downstream errors.  Aslo additions to NAMESPACE that are/will be needed.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,5 +3,11 @@
 export(Cond_mean_fn)
 export(formatting_fn)
 export(lambda0_fn)
+export(spline_fn)
+importFrom(MASS,glm.nb)
+importFrom(splines,ns)
 importFrom(stats,dnbinom)
 importFrom(survival,Surv)
+importFrom(survival,coxph)
+importFrom(survival,strata)
+importFrom(survival,survfit)
