Refactoring of the mean curve estimation to split estimation at each alpha to be run in a separate function. Changes the output to a long format with nested tibbles.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,16 @@ export(formatting_fn)
 export(lambda0_fn)
 export(spline_fn)
 importFrom(MASS,glm.nb)
+importFrom(dplyr,bind_cols)
+importFrom(dplyr,filter)
+importFrom(dplyr,inner_join)
+importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
+importFrom(dplyr,select)
 importFrom(splines,ns)
 importFrom(stats,dnbinom)
 importFrom(survival,Surv)
 importFrom(survival,coxph)
 importFrom(survival,strata)
 importFrom(survival,survfit)
+importFrom(tibble,tibble)
