--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,12 +8,14 @@ Description: What the package does (one paragraph).
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a license
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.3
 Imports: 
+    dplyr,
     MASS,
     splines,
     stats,
-    survival
+    survival,
+    tibble
 Suggests: 
     tinytest
 Config/testthat/edition: 3
