Including the linear approximation integration method for the second term of the influence function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(PCORI_sim_outcome_modeler)
 export(SIDRnew)
 export(analyze_single_index_model)
 export(compute_conditional_mean_SIM)
+export(compute_influence_term_2_linearly)
 export(construct_baseline_intensity)
 export(construct_influence_function)
 export(construct_intensity_model)
@@ -23,16 +24,29 @@ export(generate_post_baseline_times)
 export(lambda0_fn)
 export(pcori_conditional_means)
 export(spline_fn)
+importFrom(KernSmooth,dpill)
 importFrom(MASS,glm.nb)
 importFrom(assertthat,assert_that)
+importFrom(assertthat,is.count)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,group_modify)
 importFrom(dplyr,inner_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n_distinct)
 importFrom(dplyr,pull)
 importFrom(dplyr,select)
 importFrom(dplyr,summarize)
+importFrom(orthogonalsplinebasis,GramMatrix)
+importFrom(orthogonalsplinebasis,OBasis)
+importFrom(orthogonalsplinebasis,SplineBasis)
+importFrom(orthogonalsplinebasis,evaluate)
+importFrom(orthogonalsplinebasis,integrate)
+importFrom(orthogonalsplinebasis,orthogonalize)
+importFrom(purrr,map)
+importFrom(purrr,pmap)
+importFrom(purrr,reduce)
 importFrom(splines,ns)
 importFrom(stats,dnbinom)
 importFrom(survival,Surv)
