--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,20 +24,11 @@ export(generate_post_baseline_times)
 export(lambda0_fn)
 export(pcori_conditional_means)
 export(spline_fn)
+import(dplyr)
 importFrom(KernSmooth,dpill)
 importFrom(MASS,glm.nb)
 importFrom(assertthat,assert_that)
 importFrom(assertthat,is.count)
-importFrom(dplyr,bind_cols)
-importFrom(dplyr,filter)
-importFrom(dplyr,group_by)
-importFrom(dplyr,group_modify)
-importFrom(dplyr,inner_join)
-importFrom(dplyr,mutate)
-importFrom(dplyr,n_distinct)
-importFrom(dplyr,pull)
-importFrom(dplyr,select)
-importFrom(dplyr,summarize)
 importFrom(orthogonalsplinebasis,GramMatrix)
 importFrom(orthogonalsplinebasis,OBasis)
 importFrom(orthogonalsplinebasis,SplineBasis)
@@ -45,8 +36,11 @@ importFrom(orthogonalsplinebasis,evaluate)
 importFrom(orthogonalsplinebasis,integrate)
 importFrom(orthogonalsplinebasis,orthogonalize)
 importFrom(purrr,map)
+importFrom(purrr,map_dfr)
 importFrom(purrr,pmap)
 importFrom(purrr,reduce)
+importFrom(rlang,ensym)
+importFrom(rlang,eval_tidy)
 importFrom(splines,ns)
 importFrom(stats,dnbinom)
 importFrom(survival,Surv)
@@ -54,3 +48,4 @@ importFrom(survival,coxph)
 importFrom(survival,strata)
 importFrom(survival,survfit)
 importFrom(tibble,tibble)
+importFrom(tidyr,complete)
