--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: pcoriRPackage
 Title: PCORI Simulations
 Version: 0.0.0.9000
-Authors@R: 
+Authors@R: c(
     person("Andrew", "Redd", , "andrew.redd@hsc.utah.edu", role = c("aut", "cre"),
-           comment = c(ORCID = "0000-0002-6149-2438"))
+           comment = c(ORCID = "0000-0002-6149-2438")),
+    person("Agatha", "Mallett", , "agatha@geometrian.com", role = c("ctb") )   )
 Description: What the package does (one paragraph).
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a license
 Encoding: UTF-8
@@ -17,6 +18,7 @@ Imports:
     orthogonalsplinebasis,
     pracma,
     purrr,
+    Rcpp (>= 1.0.12),
     rlang,
     splines,
     stats,
@@ -31,3 +33,4 @@ Config/testthat/edition: 3
 Depends: 
     R (>= 4.2.3)
 LazyData: true
+LinkingTo: Rcpp
