--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,32 +9,29 @@ S3method(predict,PCORI_fulldata_model)
 S3method(predict,PCORI_within_group_model)
 export(Cond_mean_fn)
 export(PCORI_sim_outcome_modeler)
-export(SIDRnew)
-export(analyze_single_index_model)
-export(compute_conditional_mean_SIM)
-export(compute_influence_term_2_linearly)
 export(construct_baseline_intensity)
-export(construct_influence_function)
 export(construct_intensity_model)
-export(estimate_mean_curves)
 export(fit_PCORI_fulldata_model)
 export(fit_PCORI_within_group_model)
 export(formatting_fn)
-export(generate_post_baseline_times)
 export(lambda0_fn)
 export(pcori_conditional_means)
+export(pcori_control)
 export(spline_fn)
 import(dplyr)
 importFrom(KernSmooth,dpill)
 importFrom(MASS,glm.nb)
 importFrom(assertthat,assert_that)
 importFrom(assertthat,is.count)
+importFrom(glue,glue)
+importFrom(methods,is)
 importFrom(orthogonalsplinebasis,GramMatrix)
 importFrom(orthogonalsplinebasis,OBasis)
 importFrom(orthogonalsplinebasis,SplineBasis)
 importFrom(orthogonalsplinebasis,evaluate)
 importFrom(orthogonalsplinebasis,integrate)
 importFrom(orthogonalsplinebasis,orthogonalize)
+importFrom(pracma,quadv)
 importFrom(purrr,map)
 importFrom(purrr,map_dfr)
 importFrom(purrr,pmap)
@@ -42,10 +39,28 @@ importFrom(purrr,reduce)
 importFrom(rlang,ensym)
 importFrom(rlang,eval_tidy)
 importFrom(splines,ns)
+importFrom(stats,as.formula)
+importFrom(stats,coef)
 importFrom(stats,dnbinom)
+importFrom(stats,dnorm)
+importFrom(stats,model.frame)
+importFrom(stats,model.matrix)
+importFrom(stats,model.response)
+importFrom(stats,na.pass)
+importFrom(stats,nlminb)
+importFrom(stats,optim)
+importFrom(stats,predict)
+importFrom(stats,rexp)
+importFrom(stats,runif)
+importFrom(stats,sd)
+importFrom(stats,terms)
+importFrom(stats,time)
+importFrom(stats,var)
 importFrom(survival,Surv)
 importFrom(survival,coxph)
 importFrom(survival,strata)
 importFrom(survival,survfit)
 importFrom(tibble,tibble)
 importFrom(tidyr,complete)
+importFrom(utils,head)
+importFrom(utils,tail)
