--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,12 +8,14 @@ Description: What the package does (one paragraph).
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a license
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
 Imports: 
     assertthat,
     dplyr,
+    glue,
     KernSmooth,
     MASS,
+    methods,
     orthogonalsplinebasis,
     pracma,
     purrr,
@@ -22,7 +24,8 @@ Imports:
     stats,
     survival,
     tibble,
-    tidyr
+    tidyr,
+    utils
 Suggests: 
     dfoptim,
     testthat (>= 3.0.0),
