Update pcoriaccel documentation and exports.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,16 @@ export(formatting_fn)
 export(lambda0_fn)
 export(pcori_conditional_means)
 export(pcori_control)
+export(pcoriaccel_NW)
+export(pcoriaccel_NW_basic)
+export(pcoriaccel_compute_influence_term_2_quadv_sim_via_matrix)
+export(pcoriaccel_estimate_pmf)
+export(pcoriaccel_evaluate_basis)
+export(pcoriaccel_hello)
+export(pcoriaccel_inner)
+export(pcoriaccel_mmul)
+export(pcoriaccel_outer)
+export(pcoriaccel_sorted_unique)
 export(spline_fn)
 import(dplyr)
 importFrom(KernSmooth,dpill)
