--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,15 +9,11 @@ S3method(predict,PCORI_fulldata_model)
 S3method(predict,PCORI_within_group_model)
 export(Cond_mean_fn)
 export(PCORI_sim_outcome_modeler)
-export(construct_baseline_intensity)
-export(construct_intensity_model)
 export(fit_PCORI_fulldata_model)
 export(fit_PCORI_within_group_model)
-export(formatting_fn)
 export(lambda0_fn)
 export(pcori_conditional_means)
 export(pcori_control)
-export(spline_fn)
 import(dplyr)
 importFrom(KernSmooth,dpill)
 importFrom(MASS,glm.nb)
@@ -37,6 +33,7 @@ importFrom(purrr,map)
 importFrom(purrr,map_dfr)
 importFrom(purrr,pmap)
 importFrom(purrr,reduce)
+importFrom(rlang,":=")
 importFrom(rlang,ensym)
 importFrom(rlang,eval_tidy)
 importFrom(splines,ns)
@@ -51,6 +48,7 @@ importFrom(stats,na.pass)
 importFrom(stats,nlminb)
 importFrom(stats,optim)
 importFrom(stats,predict)
+importFrom(stats,predict.glm)
 importFrom(stats,rexp)
 importFrom(stats,runif)
 importFrom(stats,sd)
