Hoist exp(αⱼyᵢ) term out of integrand, minor improvements.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,9 +23,10 @@ export(pcoriaccel_compute_influence_term_2_quadv_sim_via_matrix)
 export(pcoriaccel_estimate_pmf)
 export(pcoriaccel_evaluate_basis)
 export(pcoriaccel_hello)
-export(pcoriaccel_inner)
+export(pcoriaccel_inner_prod)
 export(pcoriaccel_mmul)
-export(pcoriaccel_outer)
+export(pcoriaccel_outer_prod)
+export(pcoriaccel_outer_sum)
 export(pcoriaccel_sorted_unique)
 export(spline_fn)
 import(dplyr)
