Add adaptive Simpson integration method, support code, and improvements.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(pcoriaccel_estimate_pmf)
 export(pcoriaccel_evaluate_basis)
 export(pcoriaccel_hello)
 export(pcoriaccel_inner_prod)
+export(pcoriaccel_integrate_simp)
 export(pcoriaccel_mmul)
 export(pcoriaccel_outer_prod)
 export(pcoriaccel_outer_sum)
