--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,10 +6,10 @@ Authors@R: c(
            comment = c(ORCID = "0000-0002-6149-2438")),
     person("Agatha", "Mallett", , "agatha@geometrian.com", role = c("ctb") )   )
 Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a license
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.2
 Imports: 
     assertthat,
     dplyr,
