--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,8 +31,7 @@ Imports:
 Suggests: 
     dfoptim,
     inline,
-    testthat (>= 3.0.0),
-    tinytest
+    testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Depends: 
     R (>= 4.2.0)
