updates for reconcilliation.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(fit_PCORI_within_group_model)
 export(lambda0_fn)
 export(pcori_conditional_means)
 export(pcori_control)
+export(pcori_jackknife)
 export(pcoriaccel_NW)
 export(pcoriaccel_NW_basic)
 export(pcoriaccel_compute_influence_term_2_quadv_sim_via_matrix)
