--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(model.frame,"PCORI::Single-index-outcome-model")
 S3method(model.matrix,"PCORI::Single-index-outcome-model")
 S3method(pcori_conditional_means,"PCORI::Single-index-outcome-model")
 S3method(predict,"PCORI::Single-index-outcome-model")
+S3method(predict,PCORI_fulldata_model)
 S3method(predict,PCORI_within_group_model)
 export(Cond_mean_fn)
 export(PCORI_sim_outcome_modeler)
