--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,4 +79,4 @@ importFrom(tibble,tibble)
 importFrom(tidyr,complete)
 importFrom(utils,head)
 importFrom(utils,tail)
-useDynLib(pcoriRPackage, .registration = TRUE)
+useDynLib(SensIAT, .registration = TRUE)
