--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,23 +8,10 @@ S3method(pcori_conditional_means,"SensIAT::Single-index-outcome-model")
 S3method(predict,"SensIAT::Single-index-outcome-model")
 S3method(predict,SensIAT_fulldata_model)
 S3method(predict,SensIAT_within_group_model)
-export(Cond_mean_fn)
+export(SensIAT_jackknife)
 export(SensIAT_sim_outcome_modeler)
 export(fit_SensIAT_fulldata_model)
 export(fit_SensIAT_within_group_model)
-export(lambda0_fn)
-export(pcori_control)
-export(pcori_jackknife)
-export(pcoriaccel_NW)
-export(pcoriaccel_NW_basic)
-export(pcoriaccel_compute_influence_term_2_quadv_sim_via_matrix)
-export(pcoriaccel_hello)
-export(pcoriaccel_inner_prod)
-export(pcoriaccel_integrate_simp)
-export(pcoriaccel_mmul)
-export(pcoriaccel_outer_prod)
-export(pcoriaccel_outer_sum)
-export(pcoriaccel_sorted_unique)
 import(dplyr)
 importFrom(KernSmooth,dpill)
 importFrom(MASS,glm.nb)
