--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,8 +9,9 @@ Authors@R: c(
     person("Shu", "Yang", , "syang24@ncsu.edu", role = c("aut")),
     person("Bonnie", "Smith", , "bsmit179@jhmi.edu", role = c("aut")),
     person("Agatha", "Mallett", , "agatha@geometrian.com", role = c("ctb", "ctr")),
-    person("Daniel", "Scharfstein", , "daniel.scharfstein@hsc.utah.edu", role = c("pdr", "aut", "cph"),
-           comment = c(ORCID = "0000-0001-7482-9653"))
+    person("Daniel", "Scharfstein", , "daniel.scharfstein@hsc.utah.edu", role = c("pdr", "aut"),
+           comment = c(ORCID = "0000-0001-7482-9653")),
+    person("University of Utah", role="cph")
     )
 Description: Sensitivity analysis for trials with irregular and informative 
     assessment times, based on a new influence function-based, augmented 
