Add GitHub links to DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -51,3 +51,5 @@ Depends:
 LazyData: true
 LinkingTo: Rcpp
 SystemRequirements: C++17
+URL: https://github.com/UofUEpi/pcoriRPackage
+BugReports: https://github.com/UofUEpi/pcoriRPackage/issues
