--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -51,5 +51,5 @@ Depends:
 LazyData: true
 LinkingTo: Rcpp
 SystemRequirements: C++17
-URL: https://github.com/UofUEpi/pcoriRPackage, https://github.com/UofUEpiBio/pcoriRPackage
-BugReports: https://github.com/UofUEpiBio/pcoriRPackage/issues
+URL: https://github.com/UofUEpiBio/SensIAT
+BugReports: https://github.com/UofUEpiBio/SensIAT/issues
