--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -50,5 +50,5 @@ Depends:
 LazyData: true
 LinkingTo: Rcpp
 SystemRequirements: C++17
-URL: https://github.com/UofUEpiBio/SensIAT
+URL: https://github.com/UofUEpiBio/SensIAT, https://uofuepibio.github.io/SensIAT/
 BugReports: https://github.com/UofUEpiBio/SensIAT/issues
