--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,7 @@ Authors@R: c(
     person("Yujing", "Gao", , "ygao39@ncsu.edu", role = c("aut")),
     person("Shu", "Yang", , "syang24@ncsu.edu", role = c("aut")),
     person("Bonnie", "Smith", , "bsmit179@jhmi.edu", role = c("aut")),
+    person("Ravi", "Varadhan", , "ravi.varadhan@jhu.edu", role = c("aut")),
     person("Agatha", "Mallett", , "agatha@geometrian.com", role = c("ctb", "ctr")),
     person("Daniel", "Scharfstein", , "daniel.scharfstein@hsc.utah.edu", role = c("pdr", "aut"),
            comment = c(ORCID = "0000-0001-7482-9653")),
