Updated to use argument lists for each model instead of any dots.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ importFrom(orthogonalsplinebasis,evaluate)
 importFrom(orthogonalsplinebasis,integrate)
 importFrom(orthogonalsplinebasis,orthogonalize)
 importFrom(pracma,quadv)
+importFrom(purrr,discard_at)
 importFrom(purrr,map)
 importFrom(purrr,map_dfr)
 importFrom(purrr,pmap)
