--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(predict,SensIAT_fulldata_model)
 S3method(predict,SensIAT_within_group_model)
 export(SensIAT_jackknife)
 export(SensIAT_sim_outcome_modeler)
+export(SensIAT_sim_outcome_modeler_fbw)
 export(fit_SensIAT_fulldata_model)
 export(fit_SensIAT_within_group_model)
 import(dplyr)
