Renamed pcori_conditional_means to sensitivity_expected_values. Added MaveVsOriginal Vignette.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,15 +4,16 @@ S3method(coef,"SensIAT::Single-index-outcome-model")
 S3method(formula,"SensIAT::Single-index-outcome-model")
 S3method(model.frame,"SensIAT::Single-index-outcome-model")
 S3method(model.matrix,"SensIAT::Single-index-outcome-model")
-S3method(pcori_conditional_means,"SensIAT::Single-index-outcome-model")
 S3method(predict,"SensIAT::Single-index-outcome-model")
 S3method(predict,SensIAT_fulldata_model)
 S3method(predict,SensIAT_within_group_model)
+S3method(sensitivity_expected_values,"SensIAT::Single-index-outcome-model")
 export(SensIAT_jackknife)
 export(SensIAT_sim_outcome_modeler)
 export(SensIAT_sim_outcome_modeler_fbw)
 export(fit_SensIAT_fulldata_model)
 export(fit_SensIAT_within_group_model)
+export(sensitivity_expected_values)
 import(dplyr)
 importFrom(KernSmooth,dpill)
 importFrom(MASS,glm.nb)
