--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,7 +43,9 @@ Imports:
 Suggests: 
     dfoptim,
     inline,
+    knitr,
     progress,
+    rmarkdown,
     spelling,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
@@ -54,3 +56,4 @@ LinkingTo: Rcpp
 SystemRequirements: C++17
 URL: https://github.com/UofUEpiBio/SensIAT, https://uofuepibio.github.io/SensIAT/
 BugReports: https://github.com/UofUEpiBio/SensIAT/issues
+VignetteBuilder: knitr
