--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(sensitivity_expected_values,"SensIAT::Single-index-outcome-model")
 export(SensIAT_jackknife)
 export(SensIAT_sim_outcome_modeler)
 export(SensIAT_sim_outcome_modeler_fbw)
+export(add_class)
 export(fit_SensIAT_fulldata_model)
 export(fit_SensIAT_within_group_model)
 export(sensitivity_expected_values)
