refactor(jackknife): switched to using generics::prune.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,10 @@ S3method(model.matrix,"SensIAT::Single-index-outcome-model")
 S3method(predict,"SensIAT::Single-index-outcome-model")
 S3method(predict,SensIAT_fulldata_model)
 S3method(predict,SensIAT_within_group_model)
+S3method(prune,"SensIAT::Single-index-outcome-model")
+S3method(prune,SensIAT_within_group_model)
+S3method(prune,coxph)
+S3method(prune,default)
 S3method(sensitivity_expected_values,"SensIAT::Single-index-outcome-model")
 export(SensIAT_jackknife)
 export(SensIAT_sim_outcome_modeler)
@@ -21,6 +25,7 @@ importFrom(MASS,glm.nb)
 importFrom(Rcpp,sourceCpp)
 importFrom(assertthat,assert_that)
 importFrom(assertthat,is.count)
+importFrom(generics,prune)
 importFrom(glue,glue)
 importFrom(methods,is)
 importFrom(orthogonalsplinebasis,GramMatrix)
