fix: exporting SensIAT_sim_outcome_modeler_mave()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ S3method(sensitivity_expected_values,negbin)
 export(SensIAT_jackknife)
 export(SensIAT_sim_outcome_modeler)
 export(SensIAT_sim_outcome_modeler_fbw)
+export(SensIAT_sim_outcome_modeler_mave)
 export(add_class)
 export(compute_influence_terms)
 export(fit_SensIAT_fulldata_model)
