--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ S3method(sensitivity_expected_values,"SensIAT::Single-index-outcome-model")
 S3method(sensitivity_expected_values,glm)
 S3method(sensitivity_expected_values,lm)
 S3method(sensitivity_expected_values,negbin)
+export(SensIAT_fit_marginal_model)
 export(SensIAT_jackknife)
 export(SensIAT_sim_outcome_modeler)
 export(SensIAT_sim_outcome_modeler_fbw)
