bug: scoping and namespace fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ importFrom(generics,prune)
 importFrom(ggplot2,autoplot)
 importFrom(glue,glue)
 importFrom(methods,is)
+importFrom(methods,new)
 importFrom(orthogonalsplinebasis,GramMatrix)
 importFrom(orthogonalsplinebasis,OBasis)
 importFrom(orthogonalsplinebasis,SplineBasis)
@@ -63,17 +64,25 @@ importFrom(rlang,eval_tidy)
 importFrom(splines,ns)
 importFrom(stats,as.formula)
 importFrom(stats,coef)
+importFrom(stats,dbinom)
+importFrom(stats,delete.response)
 importFrom(stats,dnbinom)
 importFrom(stats,dnorm)
+importFrom(stats,dpois)
+importFrom(stats,family)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
 importFrom(stats,model.response)
+importFrom(stats,na.fail)
 importFrom(stats,na.omit)
 importFrom(stats,na.pass)
 importFrom(stats,nlminb)
 importFrom(stats,optim)
 importFrom(stats,predict)
 importFrom(stats,predict.glm)
+importFrom(stats,qnbinom)
+importFrom(stats,qnorm)
+importFrom(stats,qpois)
 importFrom(stats,rexp)
 importFrom(stats,runif)
 importFrom(stats,sd)
