feat: added utility function add_terminal_observations()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(SensIAT_sim_outcome_modeler)
 export(SensIAT_sim_outcome_modeler_fbw)
 export(SensIAT_sim_outcome_modeler_mave)
 export(add_class)
+export(add_terminal_observations)
 export(compute_influence_terms)
 export(fit_SensIAT_fulldata_model)
 export(fit_SensIAT_within_group_model)
