--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ S3method(sensitivity_expected_values,negbin)
 export(SensIAT_fit_marginal_model)
 export(SensIAT_jackknife)
 export(SensIAT_jackknife_fulldata)
+export(SensIAT_prepare_data)
 export(SensIAT_sim_outcome_modeler)
 export(SensIAT_sim_outcome_modeler_fbw)
 export(SensIAT_sim_outcome_modeler_mave)
