--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,9 +23,6 @@ S3method(prune,"SensIAT::Single-index-outcome-model")
 S3method(prune,SensIAT_within_group_model)
 S3method(prune,coxph)
 S3method(prune,default)
-export(SensIAT_jackknife)
-export(SensIAT_jackknife_fulldata)
-export(SensIAT_prepare_data)
 export(SensIAT_sim_outcome_modeler)
 export(SensIAT_sim_outcome_modeler_fbw)
 export(SensIAT_sim_outcome_modeler_mave)
@@ -37,6 +34,7 @@ export(fit_SensIAT_fulldata_model)
 export(fit_SensIAT_marginal_mean_model)
 export(fit_SensIAT_within_group_model)
 export(jackknife)
+export(prepare_SensIAT_data)
 import(dplyr)
 importFrom(KernSmooth,dpill)
 importFrom(MASS,glm.nb)
