--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,7 @@ Language: en-US
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.2
+RoxygenNote: 7.3.3
 Imports: 
     assertthat,
     dplyr,
@@ -44,8 +44,10 @@ Imports:
     utils
 Suggests: 
     dfoptim,
+    furrr,
     future,
     inline,
+    knitr,
     ManifoldOptim,
     metR,
     progress,
@@ -61,3 +63,4 @@ LinkingTo: Rcpp
 SystemRequirements: C++17
 URL: https://github.com/UofUEpiBio/SensIAT, https://uofuepibio.github.io/SensIAT/
 BugReports: https://github.com/UofUEpiBio/SensIAT/issues
+VignetteBuilder: knitr
